Updated corrections for identifying negative anymores

--- a/Positive_Anymores.ipynb
+++ b/Positive_Anymores.ipynb
@@ -9,7 +9,8 @@
    },
    "source": [
     "# Project 3: Analyzing the behaviour of the word \"anymore\" in different geographical regions\n",
-    "## Submitted by: Sid, Liz, Nick"
+    "### Submitted by: \n",
+    "Siddharth Vashishtha, Liz Lee, Nick Kasper"
    ]
   },
   {
